Plugin working with Java 8