@@ -1,12 +1,9 @@
 package test.utilities;
 
-import java.util.Collection;
-
-import main.model.umltouse.U9_Auxiliary;
-
 class TAttribute {
 	private String name;
 	private String type;
+	@SuppressWarnings("unused")
 	private String collection;
 	
 	public TAttribute(String name, String type, String collection) {
@@ -60,22 +57,22 @@ class TAttribute {
 			return false;
 		TAttribute other = (TAttribute) obj;
 		if (name == null) {
-			if (other.name != null && !other.name.contains("unnamed") && !other.name.isBlank())
+			if (other.name != null && !other.name.contains("unnamed") && !other.name.trim().isEmpty())
 				return false;
 		} else if (!name.equals(other.name)
-					&& !(name.isBlank() && other.name == null)
-					&& !(name.isBlank() && other.name.contains("unnamed"))
-					&& !((other.name == null || other.name.isBlank()) && name.contains("unnamed"))
+					&& !(name.trim().isEmpty() && other.name == null)
+					&& !(name.trim().isEmpty() && other.name.contains("unnamed"))
+					&& !((other.name == null || other.name.trim().isEmpty()) && name.contains("unnamed"))
 					&& !((other.name != null && name.contains(other.name) && name.length() == other.name.length()+1))
 					&& !((other.name != null && other.name.contains(name) && other.name.length() == name.length()+1)))
 			return false;
 		if (type == null) {
-			if (other.type != null && !other.type.contains("unnamed") && !other.type.isBlank())
+			if (other.type != null && !other.type.contains("unnamed") && !other.type.trim().isEmpty())
 				return false;
 		} else if (!type.equals(other.type)
-				&& !(type.isBlank() && other.type == null)
-				&& !(type.isBlank() && other.type.contains("unnamed"))
-				&& !((other.type == null || other.type.isBlank()) && type.contains("unnamed"))
+				&& !(type.trim().isEmpty() && other.type == null)
+				&& !(type.trim().isEmpty() && other.type.contains("unnamed"))
+				&& !((other.type == null || other.type.trim().isEmpty()) && type.contains("unnamed"))
 				&& !((other.type != null && type.contains(other.type) && type.length() == other.type.length()+1))
 				&& !((other.type != null && other.type.contains(type) && other.type.length() == type.length()+1)))
 			return false;
